# cdk_errno

./: .clang-tidy  .gitignore  .gptignore  README.md  bench  meson.build  meson.options  meson_options.txt  tasks.py
.github/workflows/: ci.yml
docs/backtrace_gathering_comparison/: README.md  compile.sh  main.c  meson.build  method_asm.h  method_backtrace.h  method_compiled_in.h  method_manual.h  posix.txt
docs/one_big_malloc_vs_multiple_small_malloc_comparison/: README.md  benchmark.py  common.h  compile.sh  levels_multiple.h  levels_single.h  meson.build  method_multiple.c  method_multiple.h  method_single.c  method_single.h  no  no_stacktrace.txt  test_multiple.c  test_single.c
docs/ringbuf_vs_malloc_comparison/: README.md  allocator_malloc.c  allocator_ringbuf.c  c_minilib_error.h  main.c  meson.build  ringbuf.c
docs/static_vs_dynamic_error/: README.md  after  backtrace_dump.txt  backtrace_dynamic.txt  before  benchmark.py  common.h  comparison_summary.md  compile.sh  dynamic.c  dynamic.h  frameptr_dump.txt  frameptr_dynamic.txt  levels.h  levels_dynamic.h  meson.build  static.c  static.h  test_backtrace.c  test_dynamic.c  test_static.c  test_static_old
example/: bench.c  code_example.c  example.c  example_1.c  example_1_lib.c  example_1_lib.h  example_2.c  example_2_lib.c  example_2_lib.h  example_c11_api.c  lstring_example.c  meson.build
example/.github/workflows/: ci.yml
include/: c_minilib_error.h  cdk_errno.h  cdk_error.h  copy.h  old.h
src/: c_minilib_error.c  cdk_error.c  common.h  meson.build
subprojects/: unity.wrap
test/: meson.build  test_cdk_errno.c  test_cdk_errno_backtrace.c
test/test_c_minilib_error.d/: common.h  meson.build  test_c_minilib_error.c  test_c_minilib_error_ringbuffer.c  test_c_minilib_error_with_backtrace.c
test/test_unity.d/: meson.build  test_unity.c
tools/: change_prefix.py  translate_err_dump.py
