# C Development Kit: Error
# ******************************************************************************
# *    Project
# ******************************************************************************
project('cdk_error', 'c',
         version: '0.0.1',
	 meson_version: '>=1.1',
	 default_options: [
            'werror=true',
            'c_std=c11',
         ],
)

# ******************************************************************************
# *    Library
# ******************************************************************************
cdk_error_inc = include_directories('include')

# ******************************************************************************
# *    Tests
# ******************************************************************************
if get_option('tests')
   subdir('test')
endif

# ******************************************************************************
# *    Example
# ******************************************************************************
if get_option('examples')
    subdir('example')
endif
